--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -270,6 +270,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\menurandomscenariosingle.cpp" />
     <ClCompile Include="src\midgardscenariomap.cpp" />
     <ClCompile Include="src\midserverlogichooks.cpp" />
+    <ClCompile Include="src\nativegameinfo.cpp" />
     <ClCompile Include="src\scenariotemplates.cpp" />
     <ClCompile Include="src\scenedit.cpp" />
     <ClCompile Include="src\effectinterf.cpp" />
@@ -670,6 +671,12 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midserverlogichooks.h" />
     <ClInclude Include="include\midunitext.h" />
     <ClInclude Include="include\midunitgroupadapter.h" />
+    <ClInclude Include="include\nativegameinfo.h" />
+    <ClInclude Include="include\nativeiteminfo.h" />
+    <ClInclude Include="include\nativelandmarkinfo.h" />
+    <ClInclude Include="include\nativeraceinfo.h" />
+    <ClInclude Include="include\nativespellinfo.h" />
+    <ClInclude Include="include\nativeunitinfo.h" />
     <ClInclude Include="include\scenariotemplates.h" />
     <ClInclude Include="include\scenedit.h" />
     <ClInclude Include="include\isoborder.h" />
