--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -224,6 +224,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\enclayoutstackhooks.cpp" />
     <ClCompile Include="src\encparambase.cpp" />
     <ClCompile Include="src\encparambasehooks.cpp" />
+    <ClCompile Include="src\exchangeinterfhooks.cpp" />
     <ClCompile Include="src\intvector.cpp" />
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\campaignstream.cpp" />
@@ -621,6 +622,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\enclayoutruinhooks.h" />
     <ClInclude Include="include\encparamidplayer.h" />
     <ClInclude Include="include\encparambasehooks.h" />
+    <ClInclude Include="include\exchangeinterfhooks.h" />
     <ClInclude Include="include\groupareamanagement.h" />
     <ClInclude Include="include\intvector.h" />
     <ClInclude Include="include\button.h" />
