--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1151,6 +1151,9 @@
     <ClCompile Include="src\middragdropinterfhooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\sitemerchantinterfhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2945,6 +2948,9 @@
       <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\middragdropinterfhooks.h">
+      <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\sitemerchantinterfhooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
