--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1136,6 +1136,9 @@
     <ClCompile Include="src\logutils.cpp">
       <Filter>utils</Filter>
     </ClCompile>
+    <ClCompile Include="src\unitstovalidate.cpp">
+      <Filter>features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2916,6 +2919,9 @@
     </ClInclude>
     <ClInclude Include="include\logutils.h">
       <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="include\unitstovalidate.h">
+      <Filter>features</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
