--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -687,6 +687,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midserverlogichooks.h" />
     <ClInclude Include="include\midunitext.h" />
     <ClInclude Include="include\midunitgroupadapter.h" />
+    <ClInclude Include="include\mqdb.h" />
     <ClInclude Include="include\netsingleplayer.h" />
     <ClInclude Include="include\netsingleplayerhooks.h" />
     <ClInclude Include="include\refreshinfo.h" />
