--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2956,6 +2956,9 @@
     <ClInclude Include="include\mqdb.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\factoryimage2.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
