--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2962,6 +2962,9 @@
     <ClInclude Include="include\factoryimage2.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\imgpacker.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
