--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -633,6 +633,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\imgpacker.h" />
     <ClInclude Include="include\imgpackerloader.h" />
     <ClInclude Include="include\imgpackerstoreloader.h" />
+    <ClInclude Include="include\imgstore2.h" />
     <ClInclude Include="include\intvector.h" />
     <ClInclude Include="include\button.h" />
     <ClInclude Include="include\campaignstream.h" />
