--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2971,6 +2971,9 @@
     <ClInclude Include="include\imgpackerloader.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\imgstore2.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
