--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -631,6 +631,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\factoryimagestill.h" />
     <ClInclude Include="include\fffactory.h" />
     <ClInclude Include="include\ffimg.h" />
+    <ClInclude Include="include\gameimagedata.h" />
     <ClInclude Include="include\groupareamanagement.h" />
     <ClInclude Include="include\imgpacker.h" />
     <ClInclude Include="include\imgpackerloader.h" />
