--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3004,6 +3004,9 @@
     <ClInclude Include="include\d2unorderedmap.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\mqdbpackedimage.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
