--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -628,6 +628,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\encparambasehooks.h" />
     <ClInclude Include="include\exchangeinterfhooks.h" />
     <ClInclude Include="include\faceimg.h" />
+    <ClInclude Include="include\faceimgimpl.h" />
     <ClInclude Include="include\factoryimage2.h" />
     <ClInclude Include="include\factoryimagestill.h" />
     <ClInclude Include="include\fffactory.h" />
