--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1160,6 +1160,9 @@
     <ClCompile Include="src\encyclopediapopup.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\intintmap.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3005,6 +3008,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\mqdbpackedimage.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\intintmap.h">
       <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
