--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3034,6 +3034,9 @@
     <ClInclude Include="include\imagedatadescriptor.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\itemextension.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
