Support random scenario generation for hotseat games

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1127,6 +1127,9 @@
     <ClCompile Include="src\menunewskirmishhotseat.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\menunewskirmishhotseathooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2916,6 +2919,9 @@
     </ClInclude>
     <ClInclude Include="include\menunewskirmishhotseat.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\menunewskirmishhotseathooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
