--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -267,6 +267,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\interfaceutils.cpp" />
     <ClCompile Include="src\enclayoutstack.cpp" />
     <ClCompile Include="src\menunewskirmishhotseat.cpp" />
+    <ClCompile Include="src\menunewskirmishhotseathooks.cpp" />
     <ClCompile Include="src\menunewskirmishsinglehooks.cpp" />
     <ClCompile Include="src\menurandomscenariosingle.cpp" />
     <ClCompile Include="src\midgardscenariomap.cpp" />
@@ -660,6 +661,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\itemtypelist.h" />
     <ClInclude Include="include\leaderunitdescriptor.h" />
     <ClInclude Include="include\menunewskirmishhotseat.h" />
+    <ClInclude Include="include\menunewskirmishhotseathooks.h" />
     <ClInclude Include="include\menunewskirmishsinglehooks.h" />
     <ClInclude Include="include\menurandomscenariosingle.h" />
     <ClInclude Include="include\midanim2.h" />
