--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1169,6 +1169,9 @@
     <ClCompile Include="src\intintmap.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\batattackgroupupgrade.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3035,6 +3038,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\itemextension.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\batattackgroupupgrade.h">
       <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
