--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1172,6 +1172,9 @@
     <ClCompile Include="src\battleutils.cpp">
       <Filter>utils</Filter>
     </ClCompile>
+    <ClCompile Include="src\groupupgradehooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
     <ClCompile Include="src\batattackgroupupgrade.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -3045,6 +3048,9 @@
     </ClInclude>
     <ClInclude Include="include\battleutils.h">
       <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="include\groupupgradehooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\batattackgroupupgrade.h">
       <Filter>game</Filter>
