--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -1043,6 +1043,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\stringintlist.h" />
     <ClInclude Include="include\stringpairarrayptr.h" />
     <ClInclude Include="include\subracecat.h" />
+    <ClInclude Include="include\subracetype.h" />
     <ClInclude Include="include\summonhooks.h" />
     <ClInclude Include="include\surfacedecompressdata.h" />
     <ClInclude Include="include\intset.h" />
