--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -549,6 +549,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\aistratplayerneutral.h" />
     <ClInclude Include="include\aistratplayerrace.h" />
     <ClInclude Include="include\aitactic.h" />
+    <ClInclude Include="include\aitacticaction.h" />
     <ClInclude Include="include\animations.h" />
     <ClInclude Include="include\attack.h" />
     <ClInclude Include="include\attackclasscat.h" />
