--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3040,6 +3040,9 @@
     <ClInclude Include="include\aitacticaction.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\aitacticactionsimple.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
