--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3046,6 +3046,9 @@
     <ClInclude Include="include\aimovestackaction.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\aigiveitemsaction.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
